Fix collapsed form margins

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -22,6 +22,10 @@ h1, h2, h3 {
   border-bottom: 3px solid #3498db;
 }
 
+.navbar-form {
+  margin: 8px 0px;
+}
+
 /* Flash Messages */
 .alert-error {
   background-color: #f2dede;
